# interview-analyzer

./: .gitignore  INTERVIEW_AGENT_README.md  README.md  app.py  docker-compose.yml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
assets/: CHANGELOG.md  clean_text.txt  code_response.txt  extract_answers.txt  sample_questions.json
config/: agent_llm_config.json
docs/: ARCHITECTURE.md
src/agents/: agent.py
src/tools/: interview_memory.py  postprocess_output.py  question_matcher.py  relevance_classifier.py  segment_text.py  speech_to_text.py  text_cleaner.py
streamlit_app/: .env.example  Dockerfile  app.py  requirements.txt
streamlit_app/prompts/: CHANGELOG.md
streamlit_app/prompts/v1/: clean_text.txt  code_response.txt  extract_answers.txt
streamlit_app/prompts/v2/: code_response.txt  extract_answers.txt
streamlit_app/utils/: asr.py  knowledge_base.py  llm_utils.py  report.py  telemetry.py
tests/: __init__.py  test_asr.py  test_knowledge_base.py  test_memory.py  test_report.py
utils/: asr.py  memory.py
